app.css
/* css reset portion */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-weight: inherit;
  font-style: inherit;
  font-size: 100%;
  color: inherit;
  font-family: 'Lato', sans-serif;
  box-sizing: border-box;
  vertical-align: baseline;
  text-decoration: none;
}

strong {
  font-weight: bolder;
}

:focus {
  outline: 0;
}

body {
  line-height: 1;
  color: black;
  background: #fbfbfb;
}

ol, ul {
  list-style: none;
}

table {
  border-collapse: separate;
  border-spacing: 0;
}

caption, th, td {
  text-align: left;
  font-weight: normal;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: "";
}

blockquote, q {
  quotes: "" "";
}

/* navbar */
.navbar {
  display: flex;
  justify-content: space-between;
  height: 64px;
  width: 100%;
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
  z-index: 3;
  position: fixed;
  background-color: #fff;
  top: 0;
  color: #444;
}

.navbar-logo {
  width: 0px;
}

.navbar-logo > img {
  height: 100%;
  padding: 12px;
  box-sizing: border-box;
}

.navbar-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-right: 20px;
  box-sizing: border-box;
  font-weight: 400;
}

.navbar-menu > li {
  height: 100%;
  position: relative;
}

.navbar-menu > li > a {
  line-height: 1.3em;
  display: inline-block;
  padding: 20px 10px;
  border-bottom: 4px solid #fff
}

.dropdown > a:hover .arrow {
  color: #f06324;
}

.dropdown {
  cursor: default;
}

.navbar-menu a:hover {
  color: #f06324;
}

.arrow {
  color: #bebebe;
}

.navbar-menu > li > .trial-button, #trial-button-mobile {
  background-color: #F06324;
  border-radius: 2px;
  color: #fff;
  line-height: 40px;
  margin: 10px;
  padding: 0px 20px;
}

.navbar-menu .trial-button:hover, #trial-button-mobile:hover {
  background-color: #f48657;
}

.dropdown-content {
  visibility: hidden;
  background-color: #fff;
  opacity: 0;
  min-width: 180px;
  max-height: 0px;
  position: absolute;
  border: 1px solid #eee;
  border-top: none;
  padding: 20px;
  transition: all 0.5s ease-out;
}

.dropdown-content > li {
  padding: 10px;
}

.dropdown:hover .dropdown-content {
  max-height: 500px;
  opacity: 1;
  visibility: visible;
}

.hamburger-menu {
  display: none;
  border: none;
  padding: 20px 20px;
  cursor: pointer;
}

.hamburger-icon {
  width: 18px;
  height: 2px;
  background-color: #444;
  margin: 3px 0;
}

#trial-button-mobile {
  display: none;
}

.description {
  line-height: 1.3em;
  background-color: #fff;
  padding: 20px;
  margin: 100px auto;
  max-width: 700px;
}

/* calculator */
.calculator {
  max-width: 700px;
  margin: 100px auto;
}

.calculator h1 {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 36px;
  font-weight: 300;
  margin-bottom: 30px;
}

.calculator-form {
  display: flex;
}

.calculator-form h2 {
  font-size: 0.9em;
}

.calculator-form fieldset, h2, select {
  width: 100%;
  margin-bottom: 5px;
}

.calculator-form fieldset {
  padding-right: 10px;
}

select {
  background-image: url('icon_chevron.png');
  background-repeat: no-repeat;
  background-size: 10px;
  background-position: 96%;
  -webkit-appearance: none;
  -moz-appearance: none;
  background-color: #fff;
  border: 1px solid #eee;
  border-radius: 2px;
  font-size: 1em;
  padding: 10px 30px 10px 10px;
}

.results-container {
  display: none;
  background: #fff;
}

.results-container * {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 300;
}

.results {
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 20px;
}

.gray {
  color: #818181;
}

.results > section {
  padding: 20px;
  width: 50%;
}

.results h2 {
  font-size: 22px;
  min-height: 60px;
}

.results-sections {
  margin-bottom: 25px;
}

.results-sections h3 {
  margin-bottom: 5px;
  line-height: 1.5em;
  font-weight: 400;
  font-size: 0.9em;
}

.results-sections h4 {
  font-size: 24px;
}

.brand-results {
  margin-top: 52px;
  text-align: right;
}

.nnn-results {
  text-align: left;
  border-left: 2px solid #ebebeb;
}

.utensils {
  height: 40px;
  margin-bottom: 10px;
}

.nnn-protein {
  color:#f06324;
}

.nnn-fat {
  color:#23ac9b;
}

.nnn-carb {
  color:#e2d16e;
}

.center-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 20px 0px;
  width: 100%;
}

.nutrients-direction img {
  margin: 10px 0px;
  width: 16px;
}

.arrow-up {
  transform: rotateX(180deg);
}

.arrow-down {
  display: none;
}

.nutrients-learn {
  color: #f06324;
  font-weight: 400;
}

.results-footer {
  text-align: center;
}

.footer-note {
  font-size: 13px;
  margin: 30px 0px;
}

@media (max-width: 800px) {
  .navbar {
    display: inline-block;
    transition: box-shadow .2s ease-in;
  }

  .navbar-menu {
    padding-right: 0;
    max-height: 0;
    display: inline-block;
    bottom: 0;
    overflow: auto;
    width: 100%;
    background-color: #fff;
    transition: max-height .2s ease-out;
  }

  .navbar-menu > li > a {
    padding: 0px;
  }

  .navbar-menu > li {
    padding: 10px 20px;
  }

  .navbar-menu > li:last-of-type {
    padding: 0px 10px;
  }

  .dropdown a {
    width: 100%;
  }

  .dropdown-content {
    transition: all 0.8s ease-out;
    position: relative;
    padding: 0px;
    border: none;
    border-bottom: 1px solid #eee;
  }

  #trial-button-mobile {
    display: inline-block;
    float: right;
  }

  .hamburger-menu {
    background-color: #fff;
    display: inline-block;
    float: right;
  }

  .active {
    background-color: #F06324;
    height: 3px;
    margin: 2px 0px;
  }

  .open {
    max-height: 70vh;
    border-bottom: 1px solid #EBEBEB;
  }

  .no-shadow {
    box-shadow: none;
  }

  .description {
    width: 100%;
  }

  .calculator {
    margin: 100px 0px;
  }

  .calculator h1, .calculator-form {
    display: block;
    width: 100%;
    padding: 0px 10px;
  }
}

